# ChangeLog for dev-util/pkgconf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconf/ChangeLog,v 1.27 2012/07/21 06:35:44 jdhore Exp $

  21 Jul 2012; Jeff Horelick <jdhore@gentoo.org>
  +files/pkgconf-0.8.1-newm4.patch, pkgconf-0.8.1.ebuild:
  Add a patch to fix bug 426410 .

*pkgconf-0.8.1 (21 Jul 2012)

  21 Jul 2012; Jeff Horelick <jdhore@gentoo.org> +pkgconf-0.8.1.ebuild,
  metadata.xml, pkgconf-0.8.ebuild, pkgconf-9999.ebuild:
  Many cleanups (Fix SRC_URI, and add a strict USE flag where applicable) and
  version bump with many compatiblity fixes.

  15 Jul 2012; Raúl Porcel <armin76@gentoo.org> pkgconf-0.8.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #420717

  27 Jun 2012; Jeroen Roovers <jer@gentoo.org> pkgconf-0.8.ebuild:
  Stable for HPPA (bug #420717).

  22 Jun 2012; Brent Baude <ranger@gentoo.org> pkgconf-0.8.ebuild:
  Marking pkgconf-0.8 ppc64 for bug 420717

  17 Jun 2012; Markus Meier <maekke@gentoo.org> pkgconf-0.8.ebuild:
  arm stable, bug #420717

  12 Jun 2012; Jeff Horelick <jdhore@gentoo.org> pkgconf-0.8.ebuild:
  marked x86 per bug 420717

  12 Jun 2012; Agostino Sarubbo <ago@gentoo.org> pkgconf-0.8.ebuild:
  Stable for amd64, wrt bug #420717

  11 Jun 2012; Jeff Horelick <jdhore@gentoo.org> pkgconf-0.8.ebuild,
  pkgconf-9999.ebuild:
  Default pkg-config USE flag to on since that's the behaviour most people will
  want/expect.

  18 May 2012; Jeff Horelick <jdhore@gentoo.org> pkgconf-0.8.ebuild:
  Add ~x86-fbsd keyword.

  18 May 2012;  <richard@gentoo.org> pkgconf-0.8.ebuild:
  keyword ~amd64-fbsd

  18 May 2012; Jeff Horelick <jdhore@gentoo.org>
  +files/pkgconf-0.8-fix-build-fbsd.patch, pkgconf-0.8.ebuild:
  Add a patch to 0.8 to fix build on BSD.

  18 May 2012;  <richard@gentoo.org> pkgconf-0.8.ebuild:
  Drop ~amd64-fbsd keyword. A regression broke pkgconf on amd64-fbsd before 0.8
  was tagged. -9999 works though.

*pkgconf-0.8 (12 May 2012)
