@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>dev-embedded</herd>
+    <maintainer>
+        <email>jdhore@gentoo.org</email>
+        <name>Jeff Horelick</name>
+    </maintainer>
 <use>
 	<flag name='pkg-config'>Install as a replacement for dev-util/pkgconfig</flag>
 	<flag name='strict'>Adhere to POSIX pkg-config specification. Useful for finding uses of non-standard pkg-config invocations.</flag>
